[package]
name = "sharks-and-fish"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { version = "0.15.0", features = ["train", "wgpu", "metal", "metrics", "fusion"] }

raylib = { version = "5.0.2" }
rapier2d = { version = "0.22.0", features = [ "simd-stable", "parallel", "debug-render" ] }

notify = { version = "7.0.0" }
toml = { version = "0.8.19" }
serde = { version = "1.0.216" }

log = { version = "0.4.22" }
pretty_env_logger = { version = "0.5.0" }
